--- a/nhdn-university/package.json
+++ b/nhdn-university/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.24.1"
