--- a/nhdn-university/package.json
+++ b/nhdn-university/package.json
@@ -11,12 +11,26 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
+    "font-awesome": "^4.7.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.2",
+    "react-select": "^5.10.0",
+    "react-thermal-printer": "^0.18.1",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
