--- a/nhdn-university/package.json
+++ b/nhdn-university/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.8.1",
@@ -30,6 +30,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.10.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.1",
     "react-thermal-printer": "^0.18.1",
     "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2"
